<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.LogIn"
    android:background="#FFF">

    <ImageView
        android:layout_width="123sp"
        android:layout_height="108sp"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:src="@drawable/logo_reg_log" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="57sp"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/inicio_sesion"
        android:textColor="@color/color53f2aa"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="20sp"
        android:backgroundTint="#259E66"
        android:hint="@string/Correo"
        android:textColor="#259E66"
        android:textColorHighlight="#259E66"
        android:textColorHint="#259E66" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="#259E66"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:textColor="#259E66"
        android:textColorHighlight="#259E66"
        android:textColorHint="#259E66" />

    <Button
        android:id="@+id/btnlogin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="247sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:background="@drawable/border_button"
        android:text="@string/iniciar_sesion" />

    <Button
        android:id="@+id/btnsingup"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="65sp"
        android:layout_marginTop="90sp"
        android:background="#37BD83"
        android:text="@string/crear_cuenta"
        android:textColor="@color/colorBlanco" />
</LinearLayout>